--- a/CitySimulator/CitySimulator.vcxproj
+++ b/CitySimulator/CitySimulator.vcxproj
@@ -128,11 +128,15 @@
     <ClCompile Include="Classes\Models\Source files\Citizen.cpp" />
     <ClCompile Include="Classes\Models\Source files\City.cpp" />
     <ClCompile Include="Classes\Services\Source files\CommandProcessor.cpp" />
+    <ClCompile Include="Classes\Utilities\Source files\Date.cpp" />
     <ClCompile Include="Classes\Models\Source files\DormBuilding.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Classes\Models\Source files\ModernBuilding.cpp" />
-    <ClCompile Include="Classes\Models\Source files\Profession.cpp" />
     <ClCompile Include="Classes\Services\Source files\Simulation.cpp" />
+    <ClCompile Include="Classes\Models\Source files\Miner.cpp" />
+    <ClCompile Include="Classes\Models\Source files\Programmer.cpp" />
+    <ClCompile Include="Classes\Models\Source files\Teacher.cpp" />
+    <ClCompile Include="Classes\Models\Source files\Unemployed.cpp" />
+    <ClCompile Include="Classes\Models\Source files\ModernBuilding.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\Models\Header files\ApartmentBuilding.h" />
@@ -140,10 +144,16 @@
     <ClInclude Include="Classes\Models\Header files\Citizen.h" />
     <ClInclude Include="Classes\Models\Header files\City.h" />
     <ClInclude Include="Classes\Services\Header files\CommandProcessor.h" />
+    <ClInclude Include="Classes\Services\Header files\Simulation.h" />
+    <ClInclude Include="Classes\Utilities\Header files\Matrix.h" />
+    <ClInclude Include="Classes\Utilities\Header files\MatrixProxy.h" />
+    <ClInclude Include="Classes\Models\Header files\Miner.h" />
+    <ClInclude Include="Classes\Models\Header files\Programmer.h" />
+    <ClInclude Include="Classes\Models\Header files\Teacher.h" />
+    <ClInclude Include="Classes\Models\Header files\Unemployed.h" />
+    <ClInclude Include="Classes\Utilities\Header files\Date.h" />
     <ClInclude Include="Classes\Models\Header files\DormBuilding.h" />
     <ClInclude Include="Classes\Models\Header files\ModernBuilding.h" />
-    <ClInclude Include="Classes\Models\Source files\Profession.h" />
-    <ClInclude Include="Classes\Services\Header files\Simulation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
