--- a/CitySimulator/CitySimulator.vcxproj.filters
+++ b/CitySimulator/CitySimulator.vcxproj.filters
@@ -66,6 +66,12 @@
     <ClCompile Include="Classes\Services\Source files\SimulationManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Classes\Models\Commands\Source files\StepCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Classes\Models\Commands\Source files\Command.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Classes\Models\Header files\Citizen.h">
@@ -120,6 +126,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Classes\Services\Header files\SimulationManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Models\Commands\Header files\Command.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Classes\Models\Commands\Header files\StepCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
