more file restructuring

--- a/CitySimulator/CitySimulator.vcxproj
+++ b/CitySimulator/CitySimulator.vcxproj
@@ -130,6 +130,23 @@
     <ClCompile Include="Classes\Models\Source files\Building.cpp" />
     <ClCompile Include="Classes\Models\Source files\Citizen.cpp" />
     <ClCompile Include="Classes\Models\Source files\City.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Commands\GenerateCommand.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Commands\StepCommand.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\ApartmentBuilding.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Building.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Citizen.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\City.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\DormBuilding.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Miner.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\ModernBuilding.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Programmer.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Teacher.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Entities\Unemployed.cpp" />
+    <ClCompile Include="Classes\Source files\Services\CommandProcessor.cpp" />
+    <ClCompile Include="Classes\Source files\Services\HistoryManager.cpp" />
+    <ClCompile Include="Classes\Source files\Services\Simulation.cpp" />
+    <ClCompile Include="Classes\Source files\Services\SimulationManager.cpp" />
+    <ClCompile Include="Classes\Source files\Utilities\Date.cpp" />
     <ClCompile Include="Classes\Utilities\Source files\Date.cpp" />
     <ClCompile Include="Classes\Models\Source files\DormBuilding.cpp" />
     <ClCompile Include="Classes\Models\Commands\Source files\GenerateCommand.cpp" />
@@ -145,6 +162,26 @@
     <ClCompile Include="Classes\Models\Commands\Source files\StepCommand.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Classes\Header files\Models\Commands\Command.h" />
+    <ClInclude Include="Classes\Header files\Models\Commands\GenerateCommand.h" />
+    <ClInclude Include="Classes\Header files\Models\Commands\StepCommand.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\ApartmentBuilding.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Building.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Citizen.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\City.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\DormBuilding.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Miner.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\ModernBuilding.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Programmer.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Teacher.h" />
+    <ClInclude Include="Classes\Header files\Models\Entities\Unemployed.h" />
+    <ClInclude Include="Classes\Header files\Services\CommandProcessor.h" />
+    <ClInclude Include="Classes\Header files\Services\HistoryManager.h" />
+    <ClInclude Include="Classes\Header files\Services\Simulation.h" />
+    <ClInclude Include="Classes\Header files\Services\SimulationManager.h" />
+    <ClInclude Include="Classes\Header files\Utilities\Date.h" />
+    <ClInclude Include="Classes\Header files\Utilities\Matrix.h" />
+    <ClInclude Include="Classes\Header files\Utilities\MatrixProxy.h" />
     <ClInclude Include="Classes\Services\Header files\HistoryManager.h" />
     <ClInclude Include="Classes\Models\Header files\ApartmentBuilding.h" />
     <ClInclude Include="Classes\Models\Header files\Building.h" />
