--- a/CitySimulator/CitySimulator.vcxproj
+++ b/CitySimulator/CitySimulator.vcxproj
@@ -125,6 +125,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Classes\Source files\Models\Commands\AddCommand.cpp" />
     <ClCompile Include="Classes\Services\Source files\HistoryManager.cpp" />
     <ClCompile Include="Classes\Models\Source files\ApartmentBuilding.cpp" />
     <ClCompile Include="Classes\Models\Source files\Building.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="Classes\Source files\Models\Entities\Citizen.cpp" />
     <ClCompile Include="Classes\Source files\Models\Entities\City.cpp" />
     <ClCompile Include="Classes\Source files\Models\Entities\DormBuilding.cpp" />
+    <ClCompile Include="Classes\Header files\Models\Entities\ISerializable.h" />
     <ClCompile Include="Classes\Source files\Models\Entities\Miner.cpp" />
     <ClCompile Include="Classes\Source files\Models\Entities\ModernBuilding.cpp" />
     <ClCompile Include="Classes\Source files\Models\Entities\Programmer.cpp" />
@@ -150,6 +152,8 @@
     <ClCompile Include="Classes\Utilities\Source files\Date.cpp" />
     <ClCompile Include="Classes\Models\Source files\DormBuilding.cpp" />
     <ClCompile Include="Classes\Models\Commands\Source files\GenerateCommand.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Commands\InfoCommand.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Commands\LoadCommand.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Classes\Services\Source files\Simulation.cpp" />
     <ClCompile Include="Classes\Models\Source files\Miner.cpp" />
@@ -160,8 +164,11 @@
     <ClCompile Include="Classes\Services\Source files\CommandProcessor.cpp" />
     <ClCompile Include="Classes\Services\Source files\SimulationManager.cpp" />
     <ClCompile Include="Classes\Models\Commands\Source files\StepCommand.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Commands\RemoveCommand.cpp" />
+    <ClCompile Include="Classes\Source files\Models\Commands\SaveCommand.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Classes\Header files\Models\Commands\AddCommand.h" />
     <ClInclude Include="Classes\Header files\Models\Commands\Command.h" />
     <ClInclude Include="Classes\Header files\Models\Commands\GenerateCommand.h" />
     <ClInclude Include="Classes\Header files\Models\Commands\StepCommand.h" />
@@ -202,6 +209,10 @@
     <ClInclude Include="Classes\Models\Commands\Header files\Command.h" />
     <ClInclude Include="Classes\Models\Commands\Header files\StepCommand.h" />
     <ClInclude Include="Classes\Models\Commands\Header files\GenerateCommand.h" />
+    <ClInclude Include="Classes\Header files\Models\Commands\RemoveCommand.h" />
+    <ClInclude Include="Classes\Header files\Models\Commands\InfoCommand.h" />
+    <ClInclude Include="Classes\Header files\Models\Commands\SaveCommand.h" />
+    <ClInclude Include="Classes\Header files\Models\Commands\LoadCommand.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
